--- a/index.html
+++ b/index.html
@@ -12,73 +12,15 @@
 <meta property="og:description" content="Kontaktuppgifter till Hedvig" />
 <meta property="og:locale" content="sv_SE" />
 <link rel="shortcut icon" href="favicon.png" />
+<link href="https://fonts.googleapis.com/css2?family=Farsan&display=swap" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
 
-<style>
-
-/* layout */
-@media (max-width: 549px) {
-	body { margin: 0;}
-	#inner-container { margin: 10px; }
-	#list { padding: 20px; }
-	#picture img { float: right; margin: 20px 20px 0px 0px; }
-}
-@media (min-width: 550px) {
-	html { height: 100%; }
-	body {
-		display: flex;
-		align-items: center;
-		height: 100%;
-		margin: 0;
-	}
-	#outer-container {
-		margin: auto;
-		width: 650px;
-		max-width: 100%;
-		padding: 0;
-		min-height: 302px;
-	}
-	#inner-container {
-		display: flex;
-		flex-wrap: wrap;
-	}
-	#list {
-		flex-basis: 286px;
-		flex-grow: 1;
-		padding: 20px;
-	}
-	#picture {
-		flex-basis: 144px;
-		flex-grow: 0;
-		padding: 20px 20px 0px 0px;
-		height: 0px;
-	}
-}
-
-/* colors and typography */
-body { background-color: #eee; }
-body, th, tr, td, p { font-family: sans-serif; }
-#inner-container { border: 1px dashed #be6b0c; background-color: white; }
-h1 { color: #000; margin: 0; }
-a:link, a:visited { color: #be6b0c; text-decoration: none; }
-a:hover, a:active { color: #884c07; text-decoration: underline; }
-ul { margin: 0; padding: 0;}
-li { list-style-type: none; padding: 2px; }
-li img { vertical-align: sub; }
-</style>
 </head>
 <body>
 	<div id="outer-container">
 	<div id="inner-container">
 		<div id="list">
 			<h1>Hedvig Mejstedt</h1>
-			<p>Håller på med digital surrealism och folkmusik på fiol. Bor i Uppsala med en katt och en sambo.</p>
-
-			<ul style="margin-right: 15px;">
-				<li><img src="icons/mail.png" alt="" /> <a href="mailto:hedvig@mejstedt.se">hedvig@mejstedt.se</a> för mail</li>
-				<li><img src="icons/instagram.png" alt="" /> <a href="http://instagram.com/a.o.petersson/">@a.o.petersson</a> på Instagram</li>
-				<li><img src="icons/letterboxd.png" alt="" /> <a href="http://letterboxd.com/AmandaOlivia">AmandaOlivia</a> på Letterboxd</li>
-				<li><img src="icons/linkedin.png" alt="" /> <a href="https://www.linkedin.com/in/amanda-petersson-b58517177/">Amanda Petersson</a> på LinkedIn</li>
-			</ul>
 		</div>
 	</div>
 	</div>
