--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <meta property="og:description" content="Kontaktuppgifter till Hedvig" />
 <meta property="og:locale" content="sv_SE" />
 <link rel="shortcut icon" href="favicon.png" />
-<link href="https://fonts.googleapis.com/css2?family=Farsan&display=swap" rel="stylesheet">
+<style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+	</style>
 <link href="main.css" rel="stylesheet">
 
 </head>
