--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -15,6 +16,8 @@
 <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 	</style>
 <link href="main.css" rel="stylesheet">
+<link href="second.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -27,3 +30,4 @@
 	</div>
 </body>
 </html>
+
