Längre bakgundsbild och Ny färg på swiper

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 /* colors and typography */
 .swiper-button-prev, .swiper-button-next {
-	color: lime;
+	color: #5c2b00;
 }
 
 div { border: 1px solid teal; }
