--- a/index.html
+++ b/index.html
@@ -26,9 +26,79 @@
     width: 100%;
     height: 100%;
 }
-.content {
-	width: 600px;
+.bild {
+	width: 100%;
+    height: 100%;
+	background-image: url('Mejstedt.se.png');
+	background-size: 50%;
+	background-repeat: no-repeat;
+	background-position: top center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
+.box {
+	width: 400px;
+	padding: 10px;
+	border: 5px solid #5b5c46;
+	background: #a4a67e;
+}
+
+.andra-sidan-h1 {
+	font-size: 2em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.andra-sidan {
+	width:100%;
+	height:100%;
+	background-image: url('andra-bilden2.png');
+	background-size: 90%;
+	background-repeat: no-repeat;
+	background-position: top center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-top: 10%;
+}
+
+.andra-sidan-boxen {
+	width: 75%;
+	padding: 10px;
+	margin: 10px;
+	border: 5px solid #5b5c46;
+	background: #a4a67e; 
+}
+
+.tredje-sidan-h1 {
+	font-size: 2em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.tredje-sidan {
+	width:100%;
+	height:100%;
+	background-image: url('tredje-sidan-bilden.png');
+	background-size: 90%;
+	background-repeat: no-repeat;
+	background-position: top center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-top: 35%;
+}
+
+.tredje-sidan-boxen {
+	width: 75%;
+	padding: 10px;
+	margin: 10px;
+	border: 5px solid #5b5c46;
+	background: #a4a67e;
 }
 
 /* colors and typography */
@@ -43,7 +113,7 @@ div { border: 1px solid teal; }
 }
 
 :root {
-  --swiper-navigation-size: 88px;
+  --swiper-navigation-size: 3em;
 }
 </style>
 </head>
@@ -55,22 +125,46 @@ div { border: 1px solid teal; }
     <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-			<div class="content blue-background" id="badrumsdorren">
-				<h1>Hedvig Mejstedt ETT</h1>
+			<div class="bild">
+				<div class="box">
+					<h1>Hedvig Mejstedt ETT</h1>
+				</div>
 			</div>
 		</div>
         <div class="swiper-slide">
-			<div class="content">
-				<h1>Hedvig Mejstedt TVÅ</h1>
+			<div class="andra-sidan-h1">
+				<h1>Design</h1>
+					<div class="andra-sidan">
+						<div class="andra-sidan-boxen">
+							<h2>Hedvig Mejstedt TVÅ a</h2>
+							</div>	
+						<div class="andra-sidan-boxen">
+							<h2>Hedvig Mejstedt TVÅ b</h2>
+							</div>	
+						<div class="andra-sidan-boxen">
+							<h2>Hedvig Mejstedt TVÅ c</h2>
+							</div>	
+						<div class="andra-sidan-boxen">
+							<h2>Hedvig Mejstedt TVÅ d</h2>
+					</div>	
+				</div>	
 			</div>
-		</div>        <div class="swiper-slide">
-			<div class="content">
-				<h1>Hedvig Mejstedt TRE</h1>
+		</div>        
+			<div class="swiper-slide">
+				<div class="tredje-sidan-h1">
+					<h1>Datting</h1>
+						</div>
+					<div class="tredje-sidan">
+						<div class="tredje-sidan-boxen">
+						<div class="tredje-sidan-boxen">
+							<h2>Hedvig Mejstedt TRE</h2>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
         ...
     </div>
-
+		
     <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
