--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <link rel="shortcut icon" href="favicon.png" />
 <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 	</style>
+<style> @import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+	</style>	
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
 
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
@@ -47,6 +49,7 @@
 
 .andra-sidan-h1 {
 	font-size: 2em;
+	font-family: 'Parisienne', cursive;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -71,6 +74,7 @@
 	margin: 10px;
 	border: 5px solid #5b5c46;
 	background: #a4a67e; 
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .tredje-sidan-h1 {
@@ -78,6 +82,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	font-family: 'Parisienne', cursive;
 }
 
 .tredje-sidan {
@@ -99,6 +104,7 @@
 	margin: 10px;
 	border: 5px solid #5b5c46;
 	background: #a4a67e;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
 /* colors and typography */
