--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 .andra-sidan {
 	width:100%;
 	height:100%;
-	background-image: url('andra-bilden2.png');
-	background-size: 90%;
+	background-image: url('andra-sidan-bilden.png');
+	background-size: 70%;
 	background-repeat: no-repeat;
 	background-position: top center;
 	display: flex;
@@ -71,7 +71,7 @@
 .andra-sidan-boxen {
 	width: 75%;
 	padding: 10px;
-	margin: 10px;
+	margin: 20%;
 	border: 5px solid #5b5c46;
 	background: #a4a67e; 
 	font-family: 'Open Sans Condensed', sans-serif;
