--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
 	<meta property="og:description" content="Kontaktuppgifter till Hedvig" />
 	<meta property="og:locale" content="sv_SE" />
 	<link rel="shortcut icon" href="favicon.png" />
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-	</style>
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
-	</style>
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
 
 	<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
@@ -26,37 +20,36 @@
 	<link href="main.css" rel="stylesheet">
 	<style type="text/css">
 		/* layout */
+
 		.swiper-container {
 			width: 100%;
 			height: 100%;
 		}
 
-		.bild {
+		.wrapper {
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			width: 100%;
 			height: 100%;
+			flex-wrap: wrap;
+		}
+
+		.wrapper-slide1 {
 			background-image: url('Mejstedt.se.png');
 			background-size: 50%;
 			background-repeat: no-repeat;
 			background-position: top center;
-			display: flex;
-			align-items: center;
-			justify-content: center;
 		}
 
-		.box {
+		.forsta-sidan {
 			width: 400px;
 			padding: 10px;
 			border: 5px solid #5b5c46;
 			background: #a4a67e;
 		}
 
-		.andra-sidan-h1 {
-			font-size: 2em;
-			font-family: 'Parisienne', cursive;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-		}
+		.wrapper-slide2 {}
 
 		.andra-sidan {
 			width: 100%;
@@ -68,59 +61,48 @@
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
-			padding-top: 10%;
+			padding-top: 25%;
 		}
 
 		.andra-sidan-boxen {
 			width: 75%;
 			padding: 10px;
-			margin: 20%;
-			border: 5px solid #5b5c46;
-			background: #a4a67e;
-			font-family: 'Open Sans Condensed', sans-serif;
-		}
-
-		.tredje-sidan-vänster {
-			width: 100%;
-			background-image: url('tredje-sidan-vänster.png');
-			background-size: 45%;
-			background-repeat: no-repeat;
-			background-position: top left;
-			display: flex;
-			flex-wrap: wrap;
-			padding-top: 35%;
-		}
-
-		.tredje-sidan-höger {
-			width: 100%;
-			background-image: url('tredje-sidan-höger.png');
-			background-size: 45%;
-			background-repeat: no-repeat;
-			background-position: top right;
-			display: flex;
-			flex-wrap: wrap;
-			padding-top: 35%;
-		}
-
-		.tredje-sidan-h1 {
-			font-size: 2em;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-			font-family: 'Parisienne', cursive;
-		}
-
-		.tredje-sidan-boxen {
-			widows: 100%;
-			;
-			height: 100%;
-			padding: 10px;
 			margin: 10px;
 			border: 5px solid #5b5c46;
 			background: #a4a67e;
 			font-family: 'Open Sans Condensed', sans-serif;
-			justify-content: center;
 		}
+
+		.wrapper-slide3 {
+			background: top left/50% repeat-y url('tredje-sidan-vanster.png'), top right/50% repeat-y url('tredje-sidan-hoger.png');
+		}
+
+		/*.tredje-sidan {
+			width: 100%;
+			height: 100%;
+			background-image: url('tredje-sidan-bilden.png');
+			background-size: 70%;
+			background-repeat: no-repeat;
+			background-position: top center;
+
+			padding-top: 10%;
+		}*/
+
+		.sidrubrik {
+			font-size: 5rem;
+			font-family: 'Parisienne', cursive;
+
+		}
+
+		/*.tredje-sidan-boxen {
+			padding: 10px;
+			width: 75%;
+			margin: 20px;
+			border: 5px solid #5b5c46;
+			background: #a4a67e;
+			font-family: 'Open Sans Condensed', sans-serif;
+			justify-content: center;
+		}*/
 
 		/* colors and typography */
 		.swiper-button-prev,
@@ -128,10 +110,10 @@
 			color: #5c2b00;
 		}
 
-		div {
+		/*		div {
 			border: 1px solid teal;
 		}
-
+*/
 		.swiper-button-disabled {
 			display: none;
 		}
@@ -150,15 +132,15 @@
 		<div class="swiper-wrapper">
 			<!-- Slides -->
 			<div class="swiper-slide">
-				<div class="bild">
-					<div class="box">
+				<div class="wrapper wrapper-slide1">
+					<div class="forsta-sidan">
 						<h1>Hedvig Mejstedt ETT</h1>
 					</div>
 				</div>
 			</div>
 			<div class="swiper-slide">
-				<div class="andra-sidan-h1">
-					<h1>Design</h1>
+				<div class="wrapper wrapper-slide2">
+					<h1 class="sidrubrik">Design</h1>
 					<div class="andra-sidan">
 						<div class="andra-sidan-boxen">
 							<h2>Hedvig Mejstedt TVÅ a</h2>
@@ -176,25 +158,25 @@
 				</div>
 			</div>
 			<div class="swiper-slide">
-				<div class="tredje-sidan-vänster"></div>
-				<div class="tredje-sidan-höger"></div>
-				<div class="tredje-sidan-h1">
-					<h1>Datting</h1>
-				</div>
-				<div class="tredje-sidan-boxen">
-					<h2>Hedvig Mejstedt TRE</h2>
+				<div class="wrapper wrapper-slide3">
+					<h1 class="sidrubrik">Datting</h1>
+					<div class="andra-sidan">
+						<div class="andra-sidan-boxen">
+							<h2>Hedvig Mejstedt TRE</h2>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-
-		<!-- If we need navigation buttons -->
-		<div class="swiper-button-prev"></div>
-		<div class="swiper-button-next"></div>
+	</div>
+	<!-- If we need navigation buttons -->
+	<div class="swiper-button-prev"></div>
+	<div class="swiper-button-next"></div>
 
 
 	</div>
 	<script type="text/javascript">
-		var mySwiper = new Swiper('.swiper-container', {
+		let mySwiper = new Swiper('.swiper-container', {
 			// Optional parameters
 			direction: 'horizontal',
 			loop: false,
