nya bilder på tredje sidan

--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
 
 		}
 
+		.tredje-sidan {
+			width: 100%;
+			height: 100%;
+			background-image: url('tredje-sidan-bilden.png');
+			background-size: 70%;
+			background-repeat: no-repeat;
+			background-position: top center;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			padding-top: 25%;
+		}
+
 		/*.tredje-sidan-boxen {
 			padding: 10px;
 			width: 75%;
@@ -160,7 +173,7 @@
 			<div class="swiper-slide">
 				<div class="wrapper wrapper-slide3">
 					<h1 class="sidrubrik">Datting</h1>
-					<div class="andra-sidan">
+					<div class="tredje-sidan">
 						<div class="andra-sidan-boxen">
 							<h2>Hedvig Mejstedt TRE</h2>
 						</div>
