--- a/index.html
+++ b/index.html
@@ -77,16 +77,6 @@
 			background: top left/50% repeat-y url('tredje-sidan-vanster.png'), top right/50% repeat-y url('tredje-sidan-hoger.png');
 		}
 
-		/*.tredje-sidan {
-			width: 100%;
-			height: 100%;
-			background-image: url('tredje-sidan-bilden.png');
-			background-size: 70%;
-			background-repeat: no-repeat;
-			background-position: top center;
-
-			padding-top: 10%;
-		}*/
 
 		.sidrubrik {
 			font-size: 5rem;
@@ -104,7 +94,16 @@
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
-			padding-top: 25%;
+			padding-top: 23%;
+		}
+
+		.tredje-sidan-boxen {
+			width: 75%;
+			padding: 10px;
+			margin: 10px;
+			border: 5px solid #5b5c46;
+			background: #a4a67e;
+			font-family: 'Open Sans Condensed', sans-serif;
 		}
 
 		/*.tredje-sidan-boxen {
@@ -120,7 +119,7 @@
 		/* colors and typography */
 		.swiper-button-prev,
 		.swiper-button-next {
-			color: #5c2b00;
+			color: #000000;
 		}
 
 		/*		div {
@@ -132,7 +131,7 @@
 		}
 
 		:root {
-			--swiper-navigation-size: 3em;
+			--swiper-navigation-size: 4em;
 		}
 	</style>
 </head>
@@ -174,7 +173,7 @@
 				<div class="wrapper wrapper-slide3">
 					<h1 class="sidrubrik">Datting</h1>
 					<div class="tredje-sidan">
-						<div class="andra-sidan-boxen">
+						<div class="tredje-sidan-boxen">
 							<h2>Hedvig Mejstedt TRE</h2>
 						</div>
 					</div>
