--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
 					<h1 class="sidrubrik">Design</h1>
 					<div class="andra-sidan">
 						<div class="andra-sidan-boxen">
-							<h2>Hedvig Mejstedt TVÅ a</h2>
+							<h2>Spela Sten, Sax Påse!</h2>
+							<button id="rock" value="rock"> Sten </button>
+							<button id="scissors" value="scissors"> Sax </button>
+							<button id="paper" value="paper"> Påse </button>
+							<p id="answer"></p>
 						</div>
 						<div class="andra-sidan-boxen">
 							<h2>Hedvig Mejstedt TVÅ b</h2>
@@ -187,6 +191,7 @@
 
 
 	</div>
+	<script src="stensaxpase.js"></script>
 	<script type="text/javascript">
 		let mySwiper = new Swiper('.swiper-container', {
 			// Optional parameters
