bild till sten sax påse

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
 			padding-top: 25%;
 		}
 
+		.sten-sax-pase {
+			width: 75%;
+			padding: 10px;
+			margin: 10px;
+			border: 5px solid #5b5c46;
+			background: #a4a67e;
+			font-family: 'Open Sans Condensed', sans-serif;
+			background: top left/20% no-repeat url('sten.jpg'), top right/20% no-repeat url('sax');
+		}
+
 		.andra-sidan-boxen {
 			width: 75%;
 			padding: 10px;
@@ -72,6 +82,7 @@
 			background: #a4a67e;
 			font-family: 'Open Sans Condensed', sans-serif;
 		}
+
 
 		.wrapper-slide3 {
 			background: top left/50% repeat-y url('tredje-sidan-vanster.png'), top right/50% repeat-y url('tredje-sidan-hoger.png');
@@ -154,9 +165,10 @@
 				<div class="wrapper wrapper-slide2">
 					<h1 class="sidrubrik">Design</h1>
 					<div class="andra-sidan">
-						<div class="andra-sidan-boxen">
+						<div class="sten-sax-pase">
 							<h2>Spela Sten, Sax Påse!</h2>
 							<button id="rock" value="rock"> Sten </button>
+							<img src="sten.jpg">
 							<button id="scissors" value="scissors"> Sax </button>
 							<button id="paper" value="paper"> Påse </button>
 							<p id="answer"></p>
