--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 					<div class="andra-sidan">
 						<div class="sten-sax-pase">
 							<h2>Spela Sten, Sax Påse!</h2>
-							<button id="rock" value="rock"> Sten </button>
+							<button class="stensaxpase-bild" id="rock" value="rock"> src="sten.jpg" </button>
 							<button id="scissors" value="scissors"> Sax </button>
 
 							<img class="stensaxpase-bild" src="pase.jpg" id="paper" value="paper">
-							<img class="stensaxpase-bild" src="sten.jpg" id="rock" value="rock">
+
 							<img class="stensaxpase-bild" src="sax.jpg" id="scissors" value="scissors">
 
 							<p id="answer"></p>
