--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 }
 
 /* colors and typography */
-body { background-color: #eee; }
+body { background-color: rgb(193, 8, 255); }
 body, th, tr, td, p { font-family: sans-serif; }
 #inner-container { border: 1px dashed #be6b0c; background-color: white; }
 h1 { color: #000; margin: 0; }
